--- a/css/series.css
+++ b/css/series.css
@@ -41,6 +41,7 @@ margin-top: 20px;
 display: flex;
 overflow: scroll;
 gap: 50px;
+box-shadow: 10px 20px 30px black;
 }
 .series2 > img {
 height: 150px;
@@ -55,4 +56,88 @@ h1{
 }
 .series{
 margin-top: 100px;
+}
+.botaodeopiniao{
+    background-color: rgba(227, 227, 181, 1);
+    padding: 10px;
+    margin-left: 30px;
+    border-radius: 10px;
+    border: 2px solid black;
+}
+
+.desuaopiniao
+{
+    margin-top: 50px;
+}
+.hover1:hover{
+    content: url(../img/gif\ series\ 1.gif);
+    width: 500px;
+    transition: 500ms;
+}
+.hover3:hover{
+    content: url(../img/gif\ series\ 1\ e.gif);
+    width: 500px;
+    transition: 500ms;
+}
+.hover2:hover{
+    content: url(../img/gif\ series\ 2.gif);
+    width: 500px;
+    transition: 500ms;
+}
+.hover4:hover{
+    content: url(../img/gif\ series\ 4.gif);
+    width: 500px;
+    transition: 500ms;
+}
+.hover5:hover{
+    content: url(../img/gif\ series\ 5.gif);
+    width: 500px;
+    transition: 500ms;
+}
+.hover6:hover{
+    content: url(../img/gif\ series6.gif);
+    width: 500px;
+    transition: 500ms;
+}
+.hover7:hover{
+    content: url(../img/gif\ series\ 7.gif);
+    width: 500px;
+    transition: 500ms;
+}
+.hover8:hover{
+    content: url(../img/gif\ series\ 8.gif);
+    width: 500px;
+    transition: 500ms;
+}
+.hover9:hover{
+    content: url(../img/gif\ series\ 9.gif);
+    width: 500px;
+    transition: 500ms;
+}
+.hover10:hover{
+    content: url(../img/gif\ series\ 10.gif);
+    width: 500px;
+    transition: 500ms;
+}
+.hover11:hover{
+    content: url(../img/gif\ series\ 11.gif);
+    width: 500px;
+    transition: 500ms;
+}
+.hover13:hover{
+    content: url(../img/gif\ series\ 13.gif);
+    width: 500px;
+    transition: 500ms;
+}
+@media (max-width:600px)
+{
+    .cabecalho{
+        flex-direction: column;
+    }
+    .menu > li > a{
+        font-size: 15px;
+    }
+}
+.menu > li > a{
+    color:rgb(123, 107, 192);
 }
