--- a/css/jogos.css
+++ b/css/jogos.css
@@ -40,6 +40,7 @@ margin-top: 20px;
 display: flex;
 overflow: scroll;
 gap: 50px;
+box-shadow: 10px 20px 30px black;
 }
 .jogos2 > img {
 height: 150px;
@@ -54,4 +55,45 @@ h1{
 }
 .jogos {
 margin-top: 100px;
+}
+.botaodeopiniao{
+    background-color: rgba(227, 227, 181, 1);
+    padding: 10px;
+    margin-left: 30px;
+    border-radius: 10px;
+    border: 2px solid black;
+}
+
+.desuaopiniao
+{
+    margin-top: 50px;
+}
+@media (max-width:600px)
+{
+    .cabecalho{
+        flex-direction: column;
+    }
+    .menu > li > a{
+        font-size: 15px;
+    }
+}
+.menu > li > a{
+    color:rgb(123, 107, 192);
+}
+
+.jogos1:hover
+{
+    content: url(../img/gif\ jogos1.1.gif);
+}
+.jogos6:hover
+{
+    content: url(../img/gif\ jogos\ 6.gif);
+}
+.jogos5:hover
+{
+    content: url(../img/gif\ jogos\ 4.gif);
+}
+.jogos8:hover
+{
+    content: url(../img/gif\ jogos\ 8.gif);
 }
