--- a/css/midia.css
+++ b/css/midia.css
@@ -14,7 +14,7 @@ body{
     background-color: aliceblue;
     width: 400px;
     height: 600px;
-    margin-top: 200px;
+    margin-top: 50px;
      background-color: rgba(227, 227, 181, 1);
     background-repeat: no-repeat;
     background-size: cover;
@@ -41,8 +41,9 @@ body{
         border-radius: 7px;
         background-color: black;
         color: rgba(227, 227, 181, 1);
-        padding: 2px;
-        margin-top: 20px;
+        padding: 6px;
+        margin-bottom: 100px;
         font-size: 20px;
         text-decoration: none;
+       
     }
