--- a/css/filme.css
+++ b/css/filme.css
@@ -12,7 +12,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-
+    box-shadow: 10px 20px 30px;
     font-size: 40px;
 }
 .menu{
