--- a/css/jogos.css
+++ b/css/jogos.css
@@ -12,7 +12,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-
+    box-shadow: 10px 20px 30px;
     font-size: 40px;
 }
 .menu{
@@ -96,4 +96,24 @@ margin-top: 100px;
 .jogos8:hover
 {
     content: url(../img/gif\ jogos\ 8.gif);
+}
+.jogos10:hover
+{
+    content: url(../img/gif\ jogos\ 9.gif);
+}
+.jogos4:hover
+{
+    content: url(../img/gif\ jogos\ 3.3.gif);
+}
+.jogos3:hover
+{
+    content: url(../img/gif\ jogos\ 3.3.3.gif);
+}
+.jogos9:hover
+{
+    content: url(../img/gif\ jogos\ 9.9.gif);
+}
+.jogos11:hover
+{
+    content: url(../img/gif\ jogos\ 10.gif);
 }
