--- a/css/midia.css
+++ b/css/midia.css
@@ -20,6 +20,8 @@ body{
     background-size: cover;
     font-size: 25px;
     color: rgb(0, 0, 0);
+    box-shadow: 10px 30px 20px black;
+
 }
 .input{
     border-radius: 7px;
@@ -36,6 +38,7 @@ body{
         justify-content: space-between;
         align-items: center;
         font-size: 40px;
+        box-shadow: 10px 20px 30px;
     }
     .botao{
         border-radius: 7px;
