--- a/css/animes.css
+++ b/css/animes.css
@@ -4,10 +4,12 @@
     box-sizing: border-box;
     font-family: 'Roboto', sem serifa;
 }
-body{
+
+body {
     background-color: rgba(39, 35, 57, 1);
 }
-.cabecalho{
+
+.cabecalho {
     background-color: rgba(227, 227, 181, 1);
     display: flex;
     justify-content: space-between;
@@ -15,147 +17,158 @@ body{
     box-shadow: 10px 20px 30px;
     font-size: 40px;
 }
-.menu{
+
+.menu {
     display: flex;
     height: 100%;
     color: black;
     align-items: center;
 }
+
 li {
     list-style-type: none;
     align-items: center;
     margin: 10px;
 }
-.botao1{
+
+.botao1 {
     background-color: rgba(39, 35, 57, 1);
     padding: 5px;
     border: 1px solid rgb(0, 0, 0);
     color: rgba(227, 227, 181, 1);
     border-radius: 20px;
 }
-h1{
-    color: rgba(227, 227, 181, 1);;
+
+h1 {
+    color: rgba(227, 227, 181, 1);
+    ;
 }
-.animes{
+
+.animes {
     margin-top: 100px;
 }
-.animes2 > img {
+
+.animes2>img {
     height: 150px;
     width: 150px;
-    }
-.animes2{
-        background-color:  rgba(227, 227, 181, 1);
+}
+
+.animes2 {
+    background-color: rgba(227, 227, 181, 1);
     padding: 20px;
     margin-top: 20px;
     display: flex;
     overflow: scroll;
     gap: 50px;
     box-shadow: 10px 20px 30px black;
-    }
-    .animes2::-webkit-scrollbar
-{
-    display: none;}
-    
-.botaodeopiniao{
-        background-color: rgba(227, 227, 181, 1);
-        padding: 10px;
-        margin-left: 30px;
-        border-radius: 10px;
-        border: 2px solid black;
-    }
-    
-.desuaopiniao
-    {
-        margin-top: 50px;
-    }
-    .anime1:hover
-    {
-        content: url(../img/gif\ anime\ 1.gif);
-    }
-    .anime2:hover
-    {
-        content: url(../img/gif\ anime\ 2.gif);
-    }
-    .anime3:hover
-    {
-        content: url(../img/anime\ gif\ 3.gif);
-    }
-    .anime4:hover
-    {
-        content: url(../img/gif\ anime\ 4.gif);
-    }
-    .anime5:hover
-    {
-        content: url(../img/gif\ anime\ 5.gif);
-    }
-    .anime6:hover
-    {
-        content: url(../img/gif\ anime\ 6.gif);
-    }
-    .anime7:hover
-    {
-        content: url(../img/gif\ anime\ 7.gif);
-    }
-    .anime8:hover
-    {
-        content: url(../img/gif\ anime\ 8.gif);
-    }
-    .anime9:hover
-    {
-        content: url(../img/gif\ anime\ 9.gif);
-    }
-    .anime10:hover
-    {
-        content: url(../img/gif\ anime\ 10.gif);
-    }
-    .anime11:hover
-    {
-        content: url(../img/gif\ anime\ 11.gif);
-    }
-    .anime12:hover
-    {
-        content: url(../img/gif\ anime\ 12.gif);
-    }
-    .anime13:hover
-    {
-        content: url(../img/gif\ anime\ 13.gif);
-    }
-    .anime14:hover
-    {
-        content: url(../img/gif\ anime\ 14.gif);
-    }
-    .anime15:hover
-    {
-        content: url(../img/gif\ anime\ 15.gif);
-    }
-    .anime16:hover
-    {
-        content: url(../img/gif\ anime\ 16.gif);
-    }
-    .anime17:hover
-    {
-        content: url(../img/gif\ anime\ 17.gif);
-    }
-    .anime18:hover
-    {
-        content: url(../img/gif\ anime\ 18.gif);
-    }
-    .anime19:hover
-    {
-        content: url(../img/gif\ anime\ 19.gif);
-    }
-    .anime10:hover
-    {
-        content: url(../img/gif\ anime\ 10.gif);
-    }
-    @media (max-width:600px)
-{
-    .cabecalho{
+}
+
+.animes2::-webkit-scrollbar {
+    display: none;
+}
+
+.botaodeopiniao {
+    background-color: rgba(227, 227, 181, 1);
+    padding: 10px;
+    margin-left: 30px;
+    border-radius: 10px;
+    border: 2px solid black;
+}
+
+.desuaopiniao {
+    margin-top: 50px;
+}
+
+.anime1:hover {
+    content: url(../img/gif\ anime\ 1.gif);
+}
+
+.anime2:hover {
+    content: url(../img/gif\ anime\ 2.gif);
+}
+
+.anime3:hover {
+    content: url(../img/anime\ gif\ 3.gif);
+}
+
+.anime4:hover {
+    content: url(../img/gif\ anime\ 4.gif);
+}
+
+.anime5:hover {
+    content: url(../img/gif\ anime\ 5.gif);
+}
+
+.anime6:hover {
+    content: url(../img/gif\ anime\ 6.gif);
+}
+
+.anime7:hover {
+    content: url(../img/gif\ anime\ 7.gif);
+}
+
+.anime8:hover {
+    content: url(../img/gif\ anime\ 8.gif);
+}
+
+.anime9:hover {
+    content: url(../img/gif\ anime\ 9.gif);
+}
+
+.anime10:hover {
+    content: url(../img/gif\ anime\ 10.gif);
+}
+
+.anime11:hover {
+    content: url(../img/gif\ anime\ 11.gif);
+}
+
+.anime12:hover {
+    content: url(../img/gif\ anime\ 12.gif);
+}
+
+.anime13:hover {
+    content: url(../img/gif\ anime\ 13.gif);
+}
+
+.anime14:hover {
+    content: url(../img/gif\ anime\ 14.gif);
+}
+
+.anime15:hover {
+    content: url(../img/gif\ anime\ 15.gif);
+}
+
+.anime16:hover {
+    content: url(../img/gif\ anime\ 16.gif);
+}
+
+.anime17:hover {
+    content: url(../img/gif\ anime\ 17.gif);
+}
+
+.anime18:hover {
+    content: url(../img/gif\ anime\ 18.gif);
+}
+
+.anime19:hover {
+    content: url(../img/gif\ anime\ 19.gif);
+}
+
+.anime10:hover {
+    content: url(../img/gif\ anime\ 10.gif);
+}
+
+@media (max-width:600px) {
+    .cabecalho {
         flex-direction: column;
     }
-    .menu > li > a{
+
+    .menu>li>a {
         font-size: 15px;
     }
-}.menu > li > a{
-    color:rgb(126, 106, 215);
+}
+
+.menu>li>a {
+    color: rgb(126, 106, 215);
 }
