--- a/css/jogos.css
+++ b/css/jogos.css
@@ -4,10 +4,12 @@
     box-sizing: border-box;
     font-family: 'Roboto', sem serifa;
 }
-body{
+
+body {
     background-color: rgba(39, 35, 57, 1);
 }
-.cabecalho{
+
+.cabecalho {
     background-color: rgba(227, 227, 181, 1);
     display: flex;
     justify-content: space-between;
@@ -15,48 +17,55 @@ body{
     box-shadow: 10px 20px 30px;
     font-size: 40px;
 }
-.menu{
+
+.menu {
     display: flex;
     height: 100%;
     color: black;
     align-items: center;
 }
+
 li {
     list-style-type: none;
     align-items: center;
     margin: 10px;
 }
-.botao1{
+
+.botao1 {
     background-color: rgba(39, 35, 57, 1);
     padding: 5px;
     border: 1px solid rgb(0, 0, 0);
     color: rgba(227, 227, 181, 1);
     border-radius: 20px;
 }
-.jogos2{
-    background-color:  rgba(227, 227, 181, 1);
-padding: 20px;
-margin-top: 20px;
-display: flex;
-overflow: scroll;
-gap: 50px;
-box-shadow: 10px 20px 30px black;
-}
-.jogos2 > img {
-height: 150px;
-}
-h1{
-    color:  rgba(227, 227, 181, 1);
+
+.jogos2 {
+    background-color: rgba(227, 227, 181, 1);
+    padding: 20px;
+    margin-top: 20px;
+    display: flex;
+    overflow: scroll;
+    gap: 50px;
+    box-shadow: 10px 20px 30px black;
 }
 
-.jogos2::-webkit-scrollbar
-{
+.jogos2>img {
+    height: 150px;
+}
+
+h1 {
+    color: rgba(227, 227, 181, 1);
+}
+
+.jogos2::-webkit-scrollbar {
     display: none;
 }
+
 .jogos {
-margin-top: 100px;
+    margin-top: 100px;
 }
-.botaodeopiniao{
+
+.botaodeopiniao {
     background-color: rgba(227, 227, 181, 1);
     padding: 10px;
     margin-left: 30px;
@@ -64,56 +73,56 @@ margin-top: 100px;
     border: 2px solid black;
 }
 
-.desuaopiniao
-{
+.desuaopiniao {
     margin-top: 50px;
 }
-@media (max-width:600px)
-{
-    .cabecalho{
+
+@media (max-width:600px) {
+    .cabecalho {
         flex-direction: column;
     }
-    .menu > li > a{
+
+    .menu>li>a {
         font-size: 15px;
     }
 }
-.menu > li > a{
-    color:rgb(123, 107, 192);
+
+.menu>li>a {
+    color: rgb(123, 107, 192);
 }
 
-.jogos1:hover
-{
+.jogos1:hover {
     content: url(../img/gif\ jogos1.1.gif);
 }
-.jogos6:hover
-{
+
+.jogos6:hover {
     content: url(../img/gif\ jogos\ 6.gif);
 }
-.jogos5:hover
-{
+
+.jogos5:hover {
     content: url(../img/gif\ jogos\ 4.gif);
 }
-.jogos8:hover
-{
+
+.jogos8:hover {
     content: url(../img/gif\ jogos\ 8.gif);
 }
-.jogos10:hover
-{
+
+.jogos10:hover {
     content: url(../img/gif\ jogos\ 9.gif);
 }
-.jogos4:hover
-{
+
+.jogos4:hover {
     content: url(../img/gif\ jogos\ 3.3.gif);
 }
-.jogos3:hover
-{
+
+.jogos3:hover {
     content: url(../img/gif\ jogos\ 3.3.3.gif);
 }
-.jogos9:hover
-{
+
+.jogos9:hover {
     content: url(../img/gif\ jogos\ 9.9.gif);
 }
-.jogos11:hover
-{
+
+.jogos11:hover {
     content: url(../img/gif\ jogos\ 10.gif);
 }
