--- a/css/midia.css
+++ b/css/midia.css
@@ -4,18 +4,20 @@
     box-sizing: border-box;
     font-family: 'Roboto', sem serifa;
 }
-body{
+
+body {
     background-color: rgba(39, 35, 57, 1);
 }
-.div{
+
+.div {
     text-align: center;
     border-radius: 10px;
     margin: 0 auto;
     background-color: aliceblue;
-    width: 400px;
+    width: 600px;
     height: 600px;
     margin-top: 50px;
-     background-color: rgba(227, 227, 181, 1);
+    background-color: rgba(227, 227, 181, 1);
     background-repeat: no-repeat;
     background-size: cover;
     font-size: 25px;
@@ -23,30 +25,71 @@ body{
     box-shadow: 10px 30px 20px black;
 
 }
-.input{
+
+.input {
     border-radius: 7px;
     background-color: rgba(217, 217, 217, 1);
     padding: 30px;
     margin-top: 30px;
 }
-.botao:hover{
-    background-color: rgb(172, 172, 43);}
 
-    .cabecalho{
-        background-color: rgba(227, 227, 181, 1);
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        font-size: 40px;
-        box-shadow: 10px 20px 30px;
+.botao:hover {
+    background-color: rgb(172, 172, 43);
+}
+
+.cabecalho {
+    background-color: rgba(227, 227, 181, 1);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 40px;
+    box-shadow: 10px 20px 30px;
+}
+
+.botao {
+    border-radius: 7px;
+    background-color: black;
+    color: rgba(227, 227, 181, 1);
+    padding: 6px;
+    margin-bottom: 100px;
+    font-size: 20px;
+    text-decoration: none;
+
+}
+
+
+.categoria {
+    border-radius: 7px;
+    background-color: rgba(217, 217, 217, 1);
+    padding: 20px;
+    margin-top: 60px;
+    width: 200px;
+
+}
+
+@media (max-width:600px) {
+    .cabecalho {
+        flex-direction: column;
     }
-    .botao{
-        border-radius: 7px;
-        background-color: black;
-        color: rgba(227, 227, 181, 1);
-        padding: 6px;
-        margin-bottom: 100px;
-        font-size: 20px;
-        text-decoration: none;
-       
+
+    .menu>li>a {
+        font-size: 15px;
     }
+}
+
+.menu>li>a {
+    color: rgb(126, 106, 215);
+}
+.lixo{
+    color:  rgba(227, 227, 181, 1);
+}
+
+.TextoCadastro {
+    color: rgba(227, 227, 181, 1);
+}
+
+@media (max-width:600){
+    .cabecalho {
+        flex-direction: column;
+    }
+}
